--- a/index.html
+++ b/index.html
@@ -105,100 +105,13 @@
           </div>
           <div class="work">
             <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
+              <img src="img/Projects/Agenda de Contactos.png" alt="" />
             </div>
             <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
+              <img src="img/Projects/UpTask.png" alt="" />
             </div>
             <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
-            </div>
-            <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
-            </div>
-            <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
-            </div>
-            <div class="project">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur fuga mollitia unde tempore odio, ducimus molestiae
-                ipsa assumenda corporis maxime, aperiam aspernatur quaerat.
-                Magnam esse quia laudantium? Doloribus, officia eum?Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Labore veritatis
-                veniam dignissimos quidem explicabo unde amet culpa maiores!
-                Nulla quaerat consequatur optio iure quidem id ipsa. Eius
-                delectus culpa fuga?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ipsa voluptates temporibus eaque quas nulla
-                voluptatibus aliquam blanditiis consequatur quod officiis natus
-                alias qui quibusdam facere laborum nesciunt molestiae, animi
-                repellat.
-              </p>
+              <img src="img/Projects/Blog de café.png" alt="" />
             </div>
           </div>
         </div>
