Cambio de imagenes png a Iconify y subida de la misma al codigo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/70815a93a7.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
@@ -65,33 +66,61 @@
           <div class="skills">
             <ul class="techs">
               <li>
-                <img src="img/HTML5.png" alt="html5" />
+                <span
+                  class="iconify"
+                  data-icon="simple-icons:html5"
+                  data-inline="false"
+                ></span>
                 <p>HTML5</p>
               </li>
               <li>
-                <img src="img/CSS3.png" alt="css3" />
+                <span
+                  class="iconify"
+                  data-icon="simple-icons:css3"
+                  data-inline="false"
+                ></span>
                 <p>CSS3</p>
               </li>
               <li>
-                <img class="edit-img" src="img/JavaScript.png" alt="js" />
+                <span
+                  class="iconify"
+                  data-icon="simple-icons:javascript"
+                  data-inline="false"
+                ></span>
                 <p>JavaScript</p>
               </li>
               <li>
-                <img class="edit-img" src="img/jquery.png" alt="jquery" />
+                <span
+                  class="iconify"
+                  data-icon="simple-icons:jquery"
+                  data-inline="false"
+                ></span>
                 <p>JQuery</p>
               </li>
             </ul>
             <ul class="techs-2">
               <li>
-                <img src="img/Ajax.png" alt="ajax" />
+                <span
+                  class="iconify"
+                  data-icon="whh:ajax"
+                  data-inline="false"
+                ></span>
                 <p>AJAX</p>
               </li>
               <li>
-                <img class="edit-img" src="img/PHP.png" alt="php" />
+                <span
+                  class="iconify"
+                  data-icon="zondicons:php-elephant"
+                  data-inline="false"
+                ></span>
                 <p>PHP</p>
               </li>
               <li>
-                <img src="img/MySQL.png" alt="mysql" />
+                <span
+                  class="iconify"
+                  data-icon="whh:mysqltwo"
+                  data-inline="false"
+                ></span>
                 <p>MySQL</p>
               </li>
             </ul>
