Eliminación de clases innecesarias y hacer el proyecto responsive agregando media querys

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <main>
       <div class="container">
-        <div id="skills" class="padding-box">
+        <div id="skills">
           <div class="subtitles-box">
             <div class="subtitles">
               <h2>Skills</h2>
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <div id="work" class="padding-box">
+        <div id="work">
           <div class="subtitles-box">
             <div class="subtitles">
               <h2>Projects</h2>
