Agregado las imagenes de los proyectos y culminando el proyecto responsivo

--- a/index.html
+++ b/index.html
@@ -148,6 +148,19 @@
           </div>
           <div class="work">
             <div class="project">
+              <img src="img/Projects/BsAsWebCamp.png" alt="" />
+              <div class="project-link">
+                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repository</a>
+              </div>
+            </div>
+            <div class="project">
+              <img src="img/Projects/ZonaAdministración.png" alt="" />
+              <div class="project-link">
+                <a href="#"><i class="fa fa-code"></i>Repository</a>
+              </div>
+            </div>
+            <div class="project">
               <img src="img/Projects/Agenda de Contactos.png" alt="" />
               <div class="project-link">
                 <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
@@ -156,9 +169,24 @@
             </div>
             <div class="project">
               <img src="img/Projects/UpTask.png" alt="" />
+              <div class="project-link">
+                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repository</a>
+              </div>
+            </div>
+            <div class="project">
+              <img src="img/Projects/Bienes Raices.png" alt="" />
+              <div class="project-link">
+                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repository</a>
+              </div>
             </div>
             <div class="project">
               <img src="img/Projects/Blog de café.png" alt="" />
+              <div class="project-link">
+                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repository</a>
+              </div>
             </div>
           </div>
         </div>
