--- a/index-es.html
+++ b/index-es.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leonardo Fernandez | Web Developer</title>
+    <title>Leonardo Fernández | Desarrollador Web</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <script
       src="https://kit.fontawesome.com/70815a93a7.js"
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-es.css" />
   </head>
   <body>
     <header>
@@ -26,8 +26,8 @@
         </div>
         <div class="about">
           <div class="traduction">
-            <a href="index-es.html"
-              >ES(Español) <i class="fa fa-globe-americas"></i
+            <a href="index.html"
+              >EN(English) <i class="fa fa-globe-americas"></i
             ></a>
           </div>
           <div class="header-nav">
@@ -35,28 +35,27 @@
               <a href="#">Linked<i class="fab fa-linkedin"></i></a>
               <a href="#"><i class="fab fa-github"></i>Github</a>
               <a href="mailto:leonardo.fernandez1402@gmail.com"
-                ><i class="fas fa-envelope"></i>Email</a
+                ><i class="fas fa-envelope"></i>Correo</a
               >
             </nav>
           </div>
           <div class="hello">
             <div class="presentation">
-              <h1>Hello! i'm Leonardo Fernández</h1>
+              <h1>¡Hola! soy Leonardo Fernández</h1>
               <p>
-                I'm 22 years old, from Venezuela who lives in Buenos Aires. I'm
-                self taught web developer and a student at Buenos Aires
-                University(UBA) where i'm studying in order to get a Informatics
-                Engineer degree.
+                Tengo 22 años, venezolano, actualmente viviendo en Buenos Aires.
+                Soy un desarrollador web autodidacta y estudiante de Ingeniería
+                Informatica en la Universidad de Buenos Aires.
               </p>
               <p>
-                I'm proactive, easy to work with, capable of working under
-                pressure, always looking to learn new things, methodical and
-                systematic.
+                Soy proactivo, facilidad para integrarme a equipos de trabajo,
+                capaz de trabajar bajo presión, autodidacta, organizado y
+                sistematico.
               </p>
             </div>
             <div class="myself">
               <img src="img/recortada.jpg" alt="leonardo-fernandez" />
-              <a href="mailto:leonardo.fernandez1402@gmail.com">Contact me</a>
+              <a href="mailto:leonardo.fernandez1402@gmail.com">Contáctame</a>
             </div>
           </div>
         </div>
@@ -68,9 +67,9 @@
           <a href="#"><i class="fas fa-home"></i></a>
         </div>
         <nav class="principal-nav">
-          <a href="#skills">Skills</a>
-          <a href="#work">Projects</a>
-          <a href="mailto:leonardo.fernandez1402@gmail.com">Contact me</a>
+          <a href="#skills">Habilidades</a>
+          <a href="#work">Proyectos</a>
+          <a href="mailto:leonardo.fernandez1402@gmail.com">Contacto</a>
         </nav>
       </div>
     </div>
@@ -79,7 +78,7 @@
         <div id="skills">
           <div class="subtitles-box">
             <div class="subtitles">
-              <h2>Skills</h2>
+              <h2>Habilidades</h2>
             </div>
           </div>
           <div class="skills">
@@ -148,49 +147,49 @@
         <div id="work">
           <div class="subtitles-box">
             <div class="subtitles">
-              <h2>Projects</h2>
+              <h2>Proyectos</h2>
             </div>
           </div>
           <div class="work">
             <div class="project">
               <img src="img/Projects/BsAsWebCamp.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-cloud"></i>Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/ZonaAdministración.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Agenda de Contactos.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-cloud"></i>Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/UpTask.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-cloud"></i>Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Bienes Raices.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-cloud"></i>Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Blog de café.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a href="#"><i class="fa fa-cloud"></i>Demo</a>
+                <a href="#"><i class="fa fa-code"></i>Repositorio</a>
               </div>
             </div>
           </div>
@@ -206,7 +205,7 @@
         >
       </nav>
       <div class="copy">
-        &copy;All the rights reserved - Leonardo Fernández 2020.
+        &copy;Todos los derechos reservados - Leonardo Fernández 2020.
       </div>
     </footer>
     <script src="js/app.js"></script>
