--- a/index-es.html
+++ b/index-es.html
@@ -22,6 +22,8 @@
         <div class="container-video">
           <video autoplay loop muted>
             <source src="video/video.mp4" type="video/mp4" />
+            <source src="video/video.webm" type="video/webm" />
+            <source src="video/video.ogv" type="video/ogg" />
           </video>
         </div>
         <div class="about">
