terminando de agregar los links

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
           </div>
           <div class="header-nav">
             <nav>
-              <a href="#">Linked<i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fab fa-github"></i>Github</a>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/leonardo-fern%C3%A1ndez-7a98061a3/"
+                >Linked<i class="fab fa-linkedin"></i
+              ></a>
+              <a target="_blank" href="https://github.com/LeoFernandezR"
+                ><i class="fab fa-github"></i>Github</a
+              >
               <a href="mailto:leonardo.fernandez1402@gmail.com"
                 ><i class="fas fa-envelope"></i>Email</a
               >
@@ -157,42 +163,82 @@
             <div class="project">
               <img src="img/Projects/BsAsWebCamp.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a target="_blank" href="https://bsaswebcamp.herokuapp.com/"
+                  ><i class="fa fa-cloud"></i>Live Demo</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/BsAsWebCamp"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/ZonaAdministración.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/AdminApp"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Agenda de Contactos.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a target="_blank" href="https://myagendaphp.herokuapp.com/"
+                  ><i class="fa fa-cloud"></i>Live Demo</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/MyAgendaPHP"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/UpTask.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a
+                  target="_blank"
+                  href="https://mytaskphp.herokuapp.com/login.php"
+                  ><i class="fa fa-cloud"></i>Live Demo</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/Uptask"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Bienes Raices.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a
+                  target="_blank"
+                  href="https://leofernandezr.github.io/Bienes-Raices/"
+                  ><i class="fa fa-cloud"></i>Live Demo</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/Bienes-Raices"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
             <div class="project">
               <img src="img/Projects/Blog de café.png" alt="" />
               <div class="project-link">
-                <a href="#"><i class="fa fa-cloud"></i>Live Demo</a>
-                <a href="#"><i class="fa fa-code"></i>Repository</a>
+                <a
+                  target="_blank"
+                  href="https://leofernandezr.github.io/BlogdeCafe/"
+                  ><i class="fa fa-cloud"></i>Live Demo</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/LeoFernandezR/BlogdeCafe"
+                  ><i class="fa fa-code"></i>Repository</a
+                >
               </div>
             </div>
           </div>
@@ -201,8 +247,14 @@
     </main>
     <footer>
       <nav class="social">
-        <a href="#">Linked<i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i>Github</a>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/leonardo-fern%C3%A1ndez-7a98061a3/"
+          >Linked<i class="fab fa-linkedin"></i
+        ></a>
+        <a target="_blank" href="https://github.com/LeoFernandezR"
+          ><i class="fab fa-github"></i>Github</a
+        >
         <a href="mailto:leonardo.fernandez1402@gmail.com"
           ><i class="fas fa-envelope"></i>Email</a
         >
