load time improvement, changes in the presentation and the stylesheets, added a function in Javascript for small devices

--- a/index-es.html
+++ b/index-es.html
@@ -20,7 +20,7 @@
     <header>
       <div class="about-me">
         <div class="container-video">
-          <video autoplay loop muted>
+          <video id="video" autoplay loop muted>
             <source src="video/video.mp4" type="video/mp4" />
             <source src="video/video.webm" type="video/webm" />
             <source src="video/video.ogv" type="video/ogg" />
@@ -49,16 +49,22 @@
           </div>
           <div class="hello">
             <div class="presentation">
-              <h1>¡Hola! soy Leonardo Fernández</h1>
+              <h1>
+                ¡Hola! <br />
+                Soy Leonardo Fernández
+              </h1>
               <p>
-                Tengo 22 años, venezolano, actualmente viviendo en Buenos Aires.
-                Soy un desarrollador web autodidacta y estudiante de Ingeniería
-                Informatica en la Universidad de Buenos Aires.
+                Desarrollador Web Jr, autodidacta y estudiante de Ingeniería
+                Informatica en la Universidad de Buenos Aires - Argentina.
               </p>
               <p>
-                Soy proactivo, facilidad para integrarme a equipos de trabajo,
-                capaz de trabajar bajo presión, autodidacta, organizado y
-                sistematico.
+                De compromiso, entrega, valores, proactivo, disciplinado y
+                perseverante.
+              </p>
+              <p>
+                Capacidad de adaptarme a desafíos laborales y profesionales; así
+                como también, a las últimas tendencias tecnológicas, mediante el
+                auto-aprendizaje y capacitación permanente.
               </p>
             </div>
             <div class="myself">
@@ -160,7 +166,7 @@
           </div>
           <div class="work">
             <div class="project">
-              <img src="img/Projects/BsAsWebCamp.png" alt="" />
+              <img src="img/Projects/BsAsWebCamp.jpg" alt="" />
               <div class="project-link">
                 <a target="_blank" href="https://bsaswebcamp.herokuapp.com/"
                   ><i class="fa fa-cloud"></i>Demo</a
@@ -173,7 +179,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/ZonaAdministración.png" alt="" />
+              <img src="img/Projects/ZonaAdministración.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -183,7 +189,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Agenda de Contactos.png" alt="" />
+              <img src="img/Projects/Agenda de Contactos.jpg" alt="" />
               <div class="project-link">
                 <a target="_blank" href="https://myagendaphp.herokuapp.com/"
                   ><i class="fa fa-cloud"></i>Demo</a
@@ -196,7 +202,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/UpTask.png" alt="" />
+              <img src="img/Projects/UpTask.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -211,7 +217,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Bienes Raices.png" alt="" />
+              <img src="img/Projects/Bienes Raices.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -226,7 +232,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Blog de café.png" alt="" />
+              <img src="img/Projects/Blog de café.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
