--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="about-me">
         <div class="container-video">
-          <video autoplay loop muted>
+          <video id="video" autoplay loop muted>
             <source src="video/video.mp4" type="video/mp4" />
             <source src="video/video.webm" type="video/webm" />
             <source src="video/video.ogv" type="video/ogg" />
@@ -49,17 +49,21 @@
           </div>
           <div class="hello">
             <div class="presentation">
-              <h1>Hello! i'm Leonardo Fernández</h1>
+              <h1>
+                Hello! <br />
+                i'm Leonardo Fernández
+              </h1>
               <p>
-                I'm 22 years old, from Venezuela who lives in Buenos Aires. I'm
-                self taught web developer and a student at Buenos Aires
-                University(UBA) where i'm studying in order to get a Informatics
-                Engineer degree.
+                Jr. Web Developer, self-taught and Informatics Engineering
+                student at the University of Buenos Aires - Argentina.
               </p>
               <p>
-                I'm proactive, easy to work with, capable of working under
-                pressure, always looking to learn new things, methodical and
-                systematic.
+                commitment, dedication, values, proactive and persistent.
+              </p>
+              <p>
+                With the ability to adapt to professional challenges; as well to
+                the latest technological trends through self-learning and
+                permanent training
               </p>
             </div>
             <div class="myself">
@@ -161,7 +165,7 @@
           </div>
           <div class="work">
             <div class="project">
-              <img src="img/Projects/BsAsWebCamp.png" alt="" />
+              <img src="img/Projects/BsAsWebCamp.jpg" alt="" />
               <div class="project-link">
                 <a target="_blank" href="https://bsaswebcamp.herokuapp.com/"
                   ><i class="fa fa-cloud"></i>Live Demo</a
@@ -174,7 +178,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/ZonaAdministración.png" alt="" />
+              <img src="img/Projects/ZonaAdministración.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -184,7 +188,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Agenda de Contactos.png" alt="" />
+              <img src="img/Projects/Agenda de Contactos.jpg" alt="" />
               <div class="project-link">
                 <a target="_blank" href="https://myagendaphp.herokuapp.com/"
                   ><i class="fa fa-cloud"></i>Live Demo</a
@@ -197,7 +201,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/UpTask.png" alt="" />
+              <img src="img/Projects/UpTask.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -212,7 +216,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Bienes Raices.png" alt="" />
+              <img src="img/Projects/Bienes Raices.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
@@ -227,7 +231,7 @@
               </div>
             </div>
             <div class="project">
-              <img src="img/Projects/Blog de café.png" alt="" />
+              <img src="img/Projects/Blog de café.jpg" alt="" />
               <div class="project-link">
                 <a
                   target="_blank"
