Uppercase in profile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="about-me">
         <div class="container-video">
-          <video id="video" autoplay loop muted>
+          <video id="video" autoplay loop muted poster="">
             <source src="video/video.mp4" type="video/mp4" />
             <source src="video/video.webm" type="video/webm" />
             <source src="video/video.ogv" type="video/ogg" />
@@ -58,7 +58,7 @@
                 student at the University of Buenos Aires - Argentina.
               </p>
               <p>
-                commitment, dedication, values, proactive and persistent.
+                Commitment, dedication, values, proactive and persistent.
               </p>
               <p>
                 With the ability to adapt to professional challenges; as well to
