add poster to background video

--- a/index-es.html
+++ b/index-es.html
@@ -20,7 +20,7 @@
     <header>
       <div class="about-me">
         <div class="container-video">
-          <video id="video" autoplay loop muted>
+          <video id="video" autoplay loop muted poster="img/poster.jpeg">
             <source src="video/video.mp4" type="video/mp4" />
             <source src="video/video.webm" type="video/webm" />
             <source src="video/video.ogv" type="video/ogg" />
