little edit in presentation

--- a/index-es.html
+++ b/index-es.html
@@ -54,7 +54,7 @@
                 Soy Leonardo Fernández
               </h1>
               <p>
-                Desarrollador Web Jr, autodidacta y estudiante de Ingeniería
+                Desarrollador Web Jr, autodidacta, estudiante de Ingeniería
                 Informatica en la Universidad de Buenos Aires - Argentina.
               </p>
               <p>
