--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 i'm Leonardo Fernández
               </h1>
               <p>
-                Jr. Web Developer, self-taught and Informatics Engineering
-                student at the University of Buenos Aires - Argentina.
+                Jr. Web Developer, self-taught, Informatics Engineering student
+                at the University of Buenos Aires - Argentina.
               </p>
               <p>
                 Commitment, dedication, values, proactive and persistent.
